--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-tabs": "^6.0.2",
     "styled-components": "^6.1.8",
     "vite-tsconfig-paths": "^4.2.3"
   },
