--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-tabs": "^6.0.2",
+    "rehype-slug": "^6.0.0",
     "styled-components": "^6.1.8",
     "vite-tsconfig-paths": "^4.2.3"
   },
