--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "@mui/x-tree-view": "^6.17.0",
+    "@react-spring/web": "^9.7.3",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
