--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-markdown": "^9.0.1",
     "react-rough-notation": "^1.0.5",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.12.2",
     "rehype-parse": "^9.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
