--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@mui/x-tree-view": "^6.17.0",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.5",
+    "child_process": "^1.0.2",
     "dotenv": "^16.3.1",
+    "fs": "^0.0.1-security",
+    "node": "^21.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
@@ -35,6 +38,7 @@
     "vite-tsconfig-paths": "^4.2.3"
   },
   "devDependencies": {
+    "@types/node": "^20.11.26",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
