Restructured folder structure of entire application to coform to standard electron building format for generalization. Fixed red files with errors. Fixed Search Bar grouping of List tabs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "electron"],
+  "include": ["src", "src/main/electron", "dist-electron/preload.js", "dist-electron/main.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
