--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "child_process": "^1.0.2",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
+    "install": "^0.13.0",
+    "marked": "^12.0.1",
     "node": "^21.7.1",
     "react": "^18.2.0",
+    "react-ctrl-f": "^0.0.4",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-rough-notation": "^1.0.5",
+    "react-scroll-into-view-if-needed": "^3.0.1",
     "react-tabs": "^6.0.2",
     "recharts": "^2.12.2",
     "rehype-parse": "^9.0.0",
@@ -42,6 +46,7 @@
     "@types/node": "^20.11.26",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.7",
+    "@types/react-scroll-into-view-if-needed": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "^4.0.4",
@@ -50,7 +55,9 @@
     "eslint": "^8.48.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "i": "^0.3.7",
     "less": "^4.2.0",
+    "npm": "^10.5.1",
     "typescript": "^5.2.2",
     "vite-plugin-electron": "^0.14.0",
     "vite-plugin-electron-renderer": "^0.14.5"
